make api and some docs
